syntax = "proto3";
package assetmantle.schema.ids.base;

import "gogoproto/gogo.proto";
import "ids/base/asset_id.proto";
import "ids/base/coin_id.proto";

message AnyOwnableID {
  option (gogoproto.goproto_getters) = false;

  oneof impl {
    AssetID asset_i_d = 1;
    CoinID coin_i_d = 2;
  }
}