syntax = "proto3";
package assetmantle.schema.ids.base;

import "gogoproto/gogo.proto";
import "ids/base/asset_id.proto";
import "ids/base/identity_id.proto";

message SplitID {
  option (gogoproto.goproto_getters) = false;

  AssetID asset_i_d = 1;
  IdentityID owner_i_d = 2;
}